# playground-pdm

./: .mise.toml  README.md  pyproject.toml
src/playground_pdm/: __main__.py  config.toml  main.py
