[project]
name = "playground-pdm"
version = "0.1.0"
description = ""
authors = [
    {name = "yasunori0418", email = "yasunori.kirin0418@gmail.com"},
]
dependencies = [
    "toml>=0.10.2",
    "loguru>=0.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.pdm.scripts]
main = 'python -m playground-pdm'
